--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "johnlimdev",
-  "sideEffects": [
-    "*.css"
-  ],
+  "name": "p90studiowebsite",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -28,6 +25,7 @@
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.4",
     "babel-loader": "^8.0.6",
     "babel-preset-minify": "^0.5.1",
     "babel-runtime": "^6.26.0",
@@ -41,10 +39,15 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "module-to-cdn": "^3.1.5",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.40.2",
+    "webpack": "^4.41.1",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "terser-webpack-plugin": "latest"
   }
 }
